--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,15 @@ target/
 /bin/
 .pydevproject
 *.pyc
-ooo.maven-config
+/ooo.maven-config/
+/ooo.engines/
+/ooo.engines.newdes/
+/ooo.runtime.newdes/
+/ooo.runtime.newdes.launcher.event/
+/ooo.runtime.newdes.logger/
+/ooo.simapis/
+/ooo.simapis.newdes/
+/ooo.simapis.newdes.osalet/
+/ooo.engines/
+/ooo.engines.newdes/
+/ooo.maven-config/
